parteIII_IV/mathParser.java
// $ANTLR 3.5 math.g 2013-07-22 12:08:03

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class mathParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "WS", 
		"'!='", "'#'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'...'", "'/'", 
		"':'", "'<'", "'<='", "'='", "'=>'", "'>'", "'>='", "'?'", "'['", "']'", 
		"'and'", "'bool'", "'false'", "'int'", "'not'", "'or'", "'print'", "'true'", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int COMMENT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int WS=7;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public mathParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public mathParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return mathParser.tokenNames; }
	@Override public String getGrammarFileName() { return "math.g"; }


		private SymbleTable st = new SymbleTable();
		private Code code = new Code();
		private int offset = 0;



	// $ANTLR start "start"
	// math.g:12:1: start : ( statement )* EOF ;
	public final void start() throws RecognitionException {
		try {
			// math.g:13:2: ( ( statement )* EOF )
			// math.g:13:4: ( statement )* EOF
			{
			// math.g:13:4: ( statement )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==9||LA1_0==25||LA1_0==36) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// math.g:13:5: statement
					{
					pushFollow(FOLLOW_statement_in_start22);
					statement();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			match(input,EOF,FOLLOW_EOF_in_start26); 
				System.out.println(code.toJasmin());	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "start"



	// $ANTLR start "statement"
	// math.g:17:1: statement : ( declaration | assignment | '?' '{' texpr= expr '}' '=>' ( whilestatement[lstart] | ifstatement ) | forstatement );
	public final void statement() throws RecognitionException {
		Type texpr =null;


			int lstart = code.getLabel();

		try {
			// math.g:21:2: ( declaration | assignment | '?' '{' texpr= expr '}' '=>' ( whilestatement[lstart] | ifstatement ) | forstatement )
			int alt3=4;
			switch ( input.LA(1) ) {
			case 36:
				{
				int LA3_1 = input.LA(2);
				if ( (LA3_1==29||LA3_1==31) ) {
					alt3=1;
				}
				else if ( ((LA3_1 >= ID && LA3_1 <= INT)||LA3_1==10||LA3_1==13||LA3_1==15||LA3_1==30||LA3_1==32||LA3_1==35) ) {
					alt3=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 25:
				{
				alt3=3;
				}
				break;
			case 9:
				{
				alt3=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// math.g:21:4: declaration
					{
					pushFollow(FOLLOW_declaration_in_statement46);
					declaration();
					state._fsp--;

					}
					break;
				case 2 :
					// math.g:22:4: assignment
					{
					pushFollow(FOLLOW_assignment_in_statement51);
					assignment();
					state._fsp--;

					}
					break;
				case 3 :
					// math.g:23:4: '?' '{' texpr= expr '}' '=>' ( whilestatement[lstart] | ifstatement )
					{
					match(input,25,FOLLOW_25_in_statement56); 

								code.emitLabel(lstart);
							
					match(input,36,FOLLOW_36_in_statement64); 
					pushFollow(FOLLOW_expr_in_statement68);
					texpr=expr();
					state._fsp--;

					match(input,37,FOLLOW_37_in_statement70); 

								if(texpr!=Type.BOOL) throw new RuntimeException(" l espressione da valutare non e booleana");
							
					match(input,22,FOLLOW_22_in_statement78); 
					// math.g:31:8: ( whilestatement[lstart] | ifstatement )
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==12) ) {
						alt2=1;
					}
					else if ( (LA2_0==36) ) {
						alt2=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}

					switch (alt2) {
						case 1 :
							// math.g:31:10: whilestatement[lstart]
							{
							pushFollow(FOLLOW_whilestatement_in_statement82);
							whilestatement(lstart);
							state._fsp--;

							}
							break;
						case 2 :
							// math.g:31:36: ifstatement
							{
							pushFollow(FOLLOW_ifstatement_in_statement88);
							ifstatement();
							state._fsp--;

							}
							break;

					}

					}
					break;
				case 4 :
					// math.g:32:4: forstatement
					{
					pushFollow(FOLLOW_forstatement_in_statement94);
					forstatement();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statement"



	// $ANTLR start "declaration"
	// math.g:36:1: declaration : '{' ( 'int' | 'bool' ) ( ',' ( 'int' | 'bool' ) )* '}' '=>' '{' id1= ID ( ',' id2= ID )* '}' ;
	public final void declaration() throws RecognitionException {
		Token id1=null;
		Token id2=null;


			// per dichiarare variabili locali al metodo
			java.util.Stack<Type> ltypes = new java.util.Stack<Type>();
			java.util.Stack<String> lids = new java.util.Stack<String>();
			Type t=null;

		try {
			// math.g:43:2: ( '{' ( 'int' | 'bool' ) ( ',' ( 'int' | 'bool' ) )* '}' '=>' '{' id1= ID ( ',' id2= ID )* '}' )
			// math.g:43:4: '{' ( 'int' | 'bool' ) ( ',' ( 'int' | 'bool' ) )* '}' '=>' '{' id1= ID ( ',' id2= ID )* '}'
			{
			match(input,36,FOLLOW_36_in_declaration112); 
			// math.g:43:8: ( 'int' | 'bool' )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==31) ) {
				alt4=1;
			}
			else if ( (LA4_0==29) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// math.g:43:9: 'int'
					{
					match(input,31,FOLLOW_31_in_declaration115); 
					 t=Type.INT; 
					}
					break;
				case 2 :
					// math.g:43:33: 'bool'
					{
					match(input,29,FOLLOW_29_in_declaration121); 
					 t=Type.BOOL; 
					}
					break;

			}

				ltypes.push(t);	
			// math.g:46:3: ( ',' ( 'int' | 'bool' ) )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==14) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// math.g:46:4: ',' ( 'int' | 'bool' )
					{
					match(input,14,FOLLOW_14_in_declaration138); 
					// math.g:46:7: ( 'int' | 'bool' )
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==31) ) {
						alt5=1;
					}
					else if ( (LA5_0==29) ) {
						alt5=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 5, 0, input);
						throw nvae;
					}

					switch (alt5) {
						case 1 :
							// math.g:46:8: 'int'
							{
							match(input,31,FOLLOW_31_in_declaration140); 
							 t=Type.INT; 
							}
							break;
						case 2 :
							// math.g:46:32: 'bool'
							{
							match(input,29,FOLLOW_29_in_declaration146); 
							 t=Type.BOOL; 
							}
							break;

					}

						ltypes.push(t);	
					}
					break;

				default :
					break loop6;
				}
			}

			match(input,37,FOLLOW_37_in_declaration162); 
			match(input,22,FOLLOW_22_in_declaration164); 
			match(input,36,FOLLOW_36_in_declaration168); 
			id1=(Token)match(input,ID,FOLLOW_ID_in_declaration172); 
				lids.push((id1!=null?id1.getText():null));	
			// math.g:49:40: ( ',' id2= ID )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==14) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// math.g:49:41: ',' id2= ID
					{
					match(input,14,FOLLOW_14_in_declaration177); 
					id2=(Token)match(input,ID,FOLLOW_ID_in_declaration181); 
						lids.push((id2!=null?id2.getText():null));	
					}
					break;

				default :
					break loop7;
				}
			}

			match(input,37,FOLLOW_37_in_declaration189); 

							if(lids.size()==ltypes.size())
								while(!lids.empty())
									st.insert(lids.pop(),ltypes.pop(),offset++);
							else
								throw new RuntimeException("Nell'assegnazione il numero di variabili non corrisponde al numero dei tipi");
						
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration"



	// $ANTLR start "assignment"
	// math.g:59:1: assignment : '{' texpr= expr ( ',' texpr= expr )* '}' '=>' '{' id1= printorid ( ',' id1= printorid )* '}' ;
	public final void assignment() throws RecognitionException {
		Type texpr =null;
		String id1 =null;


			java.util.Stack<Type>ltypes=new java.util.Stack<Type>();	
			java.util.Stack<String>lids=new java.util.Stack<String>();

		try {
			// math.g:64:2: ( '{' texpr= expr ( ',' texpr= expr )* '}' '=>' '{' id1= printorid ( ',' id1= printorid )* '}' )
			// math.g:64:4: '{' texpr= expr ( ',' texpr= expr )* '}' '=>' '{' id1= printorid ( ',' id1= printorid )* '}'
			{
			match(input,36,FOLLOW_36_in_assignment210); 
			pushFollow(FOLLOW_expr_in_assignment216);
			texpr=expr();
			state._fsp--;


						ltypes.push(texpr);
					
			// math.g:69:3: ( ',' texpr= expr )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==14) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// math.g:69:4: ',' texpr= expr
					{
					match(input,14,FOLLOW_14_in_assignment225); 
					pushFollow(FOLLOW_expr_in_assignment231);
					texpr=expr();
					state._fsp--;


								ltypes.push(texpr);
							
					}
					break;

				default :
					break loop8;
				}
			}

			match(input,37,FOLLOW_37_in_assignment242); 
			match(input,22,FOLLOW_22_in_assignment244); 
			match(input,36,FOLLOW_36_in_assignment248); 
			pushFollow(FOLLOW_printorid_in_assignment252);
			id1=printorid();
			state._fsp--;


						lids.push(id1);
					
			// math.g:79:3: ( ',' id1= printorid )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==14) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// math.g:79:4: ',' id1= printorid
					{
					match(input,14,FOLLOW_14_in_assignment261); 
					pushFollow(FOLLOW_printorid_in_assignment267);
					id1=printorid();
					state._fsp--;


								lids.push(id1);
							
					}
					break;

				default :
					break loop9;
				}
			}

			match(input,37,FOLLOW_37_in_assignment278); 

						if(lids.size()!=ltypes.size())
							throw new RuntimeException ("numero di identificatori non corrisponde al numero di valori nella dichiarazione");
						else
							while(!lids.empty()) {
								String id=lids.pop();
								Type t=ltypes.pop();
								if(id.equals("print")) {
									if(t==Type.INT)	code.emit(Opcode.IPRINT);
									else			code.emit(Opcode.BPRINT);
								} else {
									Type type = st.lookupType(id);
									int offset = st.lookupAddress(id);
									if(t!=type)
										throw new RuntimeException ("il tipo di "+id+" era "+type+" e non "+t);
									if(offset==0)
										code.emit(Opcode.istore_0);
									else if(offset==1)
										code.emit(Opcode.istore_1);
									else if(offset==2)
										code.emit(Opcode.istore_2);
									else if(offset==3)
										code.emit(Opcode.istore_3);
									else	code.emit(Opcode.istore,offset);
								}
									
							}
								
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assignment"



	// $ANTLR start "printorid"
	// math.g:116:1: printorid returns [String id] : (id1= ID | 'print' );
	public final String printorid() throws RecognitionException {
		String id = null;


		Token id1=null;

		try {
			// math.g:117:2: (id1= ID | 'print' )
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==ID) ) {
				alt10=1;
			}
			else if ( (LA10_0==34) ) {
				alt10=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}

			switch (alt10) {
				case 1 :
					// math.g:117:4: id1= ID
					{
					id1=(Token)match(input,ID,FOLLOW_ID_in_printorid300); 

								id =(id1!=null?id1.getText():null);
							
					}
					break;
				case 2 :
					// math.g:121:4: 'print'
					{
					match(input,34,FOLLOW_34_in_printorid309); 

								id ="print";
							
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return id;
	}
	// $ANTLR end "printorid"



	// $ANTLR start "whilestatement"
	// math.g:127:1: whilestatement[int lstart] : '*' '{' ( statement )* '}' ;
	public final void whilestatement(int lstart) throws RecognitionException {
		try {
			// math.g:128:2: ( '*' '{' ( statement )* '}' )
			// math.g:128:4: '*' '{' ( statement )* '}'
			{
			match(input,12,FOLLOW_12_in_whilestatement326); 
			match(input,36,FOLLOW_36_in_whilestatement328); 
			// math.g:128:12: ( statement )*
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==9||LA11_0==25||LA11_0==36) ) {
					alt11=1;
				}

				switch (alt11) {
				case 1 :
					// math.g:128:13: statement
					{
					pushFollow(FOLLOW_statement_in_whilestatement331);
					statement();
					state._fsp--;

					}
					break;

				default :
					break loop11;
				}
			}

			match(input,37,FOLLOW_37_in_whilestatement335); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "whilestatement"



	// $ANTLR start "forstatement"
	// math.g:131:1: forstatement : '#' '{' id1= ID ',' '[' int1= INT '...' int2= INT ']' '}' '=>' '#' '{' ( statement )* '}' ;
	public final void forstatement() throws RecognitionException {
		Token id1=null;
		Token int1=null;
		Token int2=null;


			int a,z;
			String id;
			int offset;
			int lstart=code.getLabel();
			int lnext=code.getLabel();

		try {
			// math.g:139:2: ( '#' '{' id1= ID ',' '[' int1= INT '...' int2= INT ']' '}' '=>' '#' '{' ( statement )* '}' )
			// math.g:140:3: '#' '{' id1= ID ',' '[' int1= INT '...' int2= INT ']' '}' '=>' '#' '{' ( statement )* '}'
			{
			match(input,9,FOLLOW_9_in_forstatement354); 
			match(input,36,FOLLOW_36_in_forstatement356); 
			id1=(Token)match(input,ID,FOLLOW_ID_in_forstatement360); 
			id=Integer.parseInt((id1!=null?id1.getText():null)); 
			match(input,14,FOLLOW_14_in_forstatement365); 
			match(input,26,FOLLOW_26_in_forstatement369); 
			int1=(Token)match(input,INT,FOLLOW_INT_in_forstatement373); 
			a=Integer.parseInt((int1!=null?int1.getText():null)); 
			match(input,16,FOLLOW_16_in_forstatement377); 
			int2=(Token)match(input,INT,FOLLOW_INT_in_forstatement381); 
			z=Integer.parseInt((int2!=null?int2.getText():null)); 
			match(input,27,FOLLOW_27_in_forstatement385); 
			match(input,37,FOLLOW_37_in_forstatement389); 
			match(input,22,FOLLOW_22_in_forstatement391); 
			match(input,9,FOLLOW_9_in_forstatement393); 

						st.insert(id,Type.INT,a);
						offset=st.lookupAddress(id);
						code.emitLabel(lstart);
						code.emit(Opcode.bipush,z);
						code.emit(Opcode.iload,a);
						code.emit(Opcode.if_icmpgt,lnext);
						
					
			match(input,36,FOLLOW_36_in_forstatement401); 
			// math.g:152:7: ( statement )*
			loop12:
			while (true) {
				int alt12=2;
				int LA12_0 = input.LA(1);
				if ( (LA12_0==9||LA12_0==25||LA12_0==36) ) {
					alt12=1;
				}

				switch (alt12) {
				case 1 :
					// math.g:152:8: statement
					{
					pushFollow(FOLLOW_statement_in_forstatement404);
					statement();
					state._fsp--;

					}
					break;

				default :
					break loop12;
				}
			}

			match(input,37,FOLLOW_37_in_forstatement408); 
				
						
						code.emit(Opcode.iconst_1);
						code.emit(Opcode.iload,offset);
						code.emit(Opcode.iadd);
						code.emit(Opcode.istore,offset);
						code.emit(Opcode.goto_,lstart);
						code.emitLabel(lnext);
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "forstatement"



	// $ANTLR start "ifstatement"
	// math.g:165:1: ifstatement : '{' ( statement )* '}' ( ':' '{' ( statement )* '}' )? ;
	public final void ifstatement() throws RecognitionException {

			int lfalse = code.getLabel();
			int lnext = lfalse;

		try {
			// math.g:170:2: ( '{' ( statement )* '}' ( ':' '{' ( statement )* '}' )? )
			// math.g:170:4: '{' ( statement )* '}' ( ':' '{' ( statement )* '}' )?
			{
			match(input,36,FOLLOW_36_in_ifstatement430); 

						code.emit(Opcode.ifeq,lfalse);
					
			// math.g:174:3: ( statement )*
			loop13:
			while (true) {
				int alt13=2;
				int LA13_0 = input.LA(1);
				if ( (LA13_0==9||LA13_0==25||LA13_0==36) ) {
					alt13=1;
				}
